--- a/nginx/pages/index.html
+++ b/nginx/pages/index.html
@@ -9,8 +9,8 @@
 
 <ul>
     <li><a href="tools.html">Инструменты</a></li>
-    <li><a href="worker.php">Коллектив</a></li>
-    <li><a href="contacts.php">Контакты</a></li>
+    <li><a href="index.php">Коллектив</a></li>
+    <li><a href="index.php">Контакты</a></li>
 </ul>
 </body>
 </html>
