Update to 7.3 and little changes

--- a/nginx/src/en/about.html
+++ b/nginx/src/en/about.html
@@ -12,7 +12,7 @@ if (!empty($_COOKIE['fav']) && $_COOKIE['fav'] == 'witcher') {
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
-    <title>About Сoffee house</title>
+    <title>About us</title>
     <link rel="icon" href="<?php echo $favicon; ?>" type="image/x-icon" id="fav-link">
     <link rel="stylesheet"
           href="<?php echo $themeStyleSheet; ?>"
